# fetch-MCP-rs

./: Cargo.toml  README.md
src/: main.rs
tests/: e2e.rs
